--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "node_modules/@powerbi-visuals-utils/displayunitsystemtype/lib/index.d.ts",
     "node_modules/@powerbi-visuals-utils/displayunitsystem/lib/index.d.ts",
     "node_modules/@powerbi-visuals-utils/formattingservice/lib/index.d.ts",
+    "node_modules/@powerbi-visuals-utils/settingsparser/lib/index.d.ts",
     "src/dataInterfaces.ts",
     "src/settings.ts",
     "src/layout.ts",
