--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@powerbi-visuals-utils/cssconstants": "git+https://github.com/uve/powerbi-visuals-utils-cssconstants.git",
     "@powerbi-visuals-utils/displayunitsystem": "git+https://github.com/ignatvilesov/powerbi-visuals-utils-displayunitsystem.git",
     "@powerbi-visuals-utils/displayunitsystemtype": "git+https://github.com/ignatvilesov/powerbi-visuals-utils-displayunitsystemtype.git",
+    "@powerbi-visuals-utils/external-loader": "git+https://github.com/ignatvilesov/powerbi-visuals-utils-external-loader.git",
     "@powerbi-visuals-utils/formattingservice": "git+https://github.com/ignatvilesov/powerbi-visuals-utils-formattingservice.git",
     "@powerbi-visuals-utils/imargin": "git+https://github.com/ignatvilesov/powerbi-visuals-utils-imargin.git",
     "@powerbi-visuals-utils/point": "git+https://github.com/vtkalek/powerbi-visuals-utils-point.git",
@@ -38,6 +39,11 @@
     "@powerbi-visuals-utils/svgutil": "git+https://github.com/vtkalek/powerbi-visuals-utils-svgutil.git",
     "@powerbi-visuals-utils/textmeasurementservice": "git+https://github.com/uve/powerbi-visuals-utils-textmeasurementservice.git",
     "@powerbi-visuals-utils/valueformatter": "git+https://github.com/ignatvilesov/powerbi-visuals-utils-valueformatter.git",
+    "d3": "3.5.5",
+    "globalize": "0.1.0-a2",
+    "jquery": "3.1.1",
+    "lodash": "4.16.2",
+    "moment": "2.15.1",
     "powerbi-visuals-tools": "1.2.1",
     "tslint": "3.15.1",
     "typings": "1.5.0"
