--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "typings/index.d.ts",
     ".api/v1.2.0/PowerBI-visuals.d.ts",
     "node_modules/@powerbi-visuals-utils/cssconstants/lib/index.d.ts",
+    "node_modules/@powerbi-visuals-utils/pixelconverter/lib/index.d.ts",
     "node_modules/@powerbi-visuals-utils/textmeasurementservice/lib/index.d.ts",
     "node_modules/@powerbi-visuals-utils/valueformatter/lib/index.d.ts",
     "node_modules/@powerbi-visuals-utils/shapes/lib/index.d.ts",
