--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,21 +9,12 @@
   },
   "files": [
     "typings/index.d.ts",
-    ".api/v1.2.0/PowerBI-visuals.d.ts",
-    "node_modules/@powerbi-visuals-utils/cssconstants/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/pixelconverter/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/textmeasurementservice/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/valueformatter/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/shapes/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/imargin/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/colorhelper/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/svgutil/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/rect/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/point/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/displayunitsystemtype/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/displayunitsystem/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/formattingservice/lib/index.d.ts",
-    "node_modules/@powerbi-visuals-utils/settingsparser/lib/index.d.ts",
+    ".api/v1.3.0/PowerBI-visuals.d.ts",
+    "node_modules/powerbi-visuals-utils-typeutils/lib/index.d.ts",
+    "node_modules/powerbi-visuals-utils-svgutils/lib/index.d.ts",
+    "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
+    "node_modules/powerbi-visuals-utils-formattingutils/lib/index.d.ts",
+    "node_modules/powerbi-visuals-utils-colorutils/lib/index.d.ts",
     "src/dataInterfaces.ts",
     "src/settings.ts",
     "src/layout.ts",
