--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-formattingutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-colorutils/lib/index.d.ts",
+    "node_modules/powerbi-visuals-utils-tooltiputils/lib/index.d.ts",
     "src/dataInterfaces.ts",
     "src/settings.ts",
     "src/layout.ts",
