--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "jasmine-jquery": "2.1.1",
     "karma": "1.7.0",
     "karma-chrome-launcher": "2.1.1",
+    "karma-coverage": "1.1.1",
     "karma-jasmine": "1.1.0",
+    "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-typescript-preprocessor": "0.3.1",
     "powerbi-visuals-tools": "1.7.0",
