--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/jasmine-jquery": "1.5.29",
     "@types/jquery": "2.0.46",
     "@types/lodash": "4.14.55",
+    "coveralls": "^2.13.1",
     "jasmine": "2.6.0",
     "jasmine-jquery": "2.1.1",
     "karma": "1.7.0",
