--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,14 @@
     "declaration": true
   },
   "files": [
-    ".api/v1.7.0/PowerBI-visuals.d.ts",
+    ".api/v1.11.0/PowerBI-visuals.d.ts",
     "node_modules/powerbi-visuals-utils-typeutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-svgutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-formattingutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-colorutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-tooltiputils/lib/index.d.ts",
+    "node_modules/powerbi-models/dist/models-noexports.d.ts",
     "src/dataInterfaces.ts",
     "src/settings.ts",
     "src/layout.ts",
