--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-wordcloud",
-  "version": "1.6.0",
+  "version": "1.7.0",
   "description": "Word Cloud is a visual representation of word frequency and value. Use it to get instant insight into the most important terms in a set.",
   "repository": {
     "type": "git",
@@ -10,7 +10,7 @@
     "powerbi-visuals"
   ],
   "scripts": {
-    "postinstall": "pbiviz update 1.11.0",
+    "postinstall": "pbiviz update 1.13.0",
     "pbiviz": "pbiviz",
     "start": "pbiviz start",
     "package": "pbiviz package",
@@ -31,7 +31,7 @@
   "dependencies": {
     "d3": "3.5.5",
     "lodash": "4.17.4",
-    "powerbi-visuals-utils-colorutils": "^1.0.0",
+    "powerbi-visuals-utils-colorutils": "^1.1.0",
     "powerbi-visuals-utils-dataviewutils": "^1.2.0",
     "powerbi-visuals-utils-formattingutils": "^2.0.0",
     "powerbi-visuals-utils-svgutils": "^1.1.0",
@@ -45,17 +45,18 @@
     "@types/jasmine-jquery": "1.5.29",
     "@types/jquery": "2.0.46",
     "@types/lodash": "4.14.55",
-    "coveralls": "^2.13.1",
+    "coveralls": "3.0.2",
     "jasmine": "2.6.0",
     "jasmine-jquery": "2.1.1",
     "jquery": "3.2.1",
-    "karma": "1.7.0",
-    "karma-chrome-launcher": "2.1.1",
-    "karma-jasmine": "1.1.0",
+    "karma": "2.0.4",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-jasmine": "1.1.2",
     "karma-sourcemap-loader": "0.3.7",
     "karma-typescript-preprocessor": "0.3.1",
-    "powerbi-visuals-tools": "1.11.2",
+    "powerbi-visuals-tools": "1.13.0",
     "powerbi-visuals-utils-testutils": "1.2.1",
+    "puppeteer": "^1.5.0",
     "tslint": "5.4.3",
     "tslint-microsoft-contrib": "5.0.0",
     "typescript": "2.1.4"
