--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-wordcloud",
-  "version": "1.7.1",
+  "version": "2.0.0",
   "description": "Word Cloud is a visual representation of word frequency and value. Use it to get instant insight into the most important terms in a set.",
   "repository": {
     "type": "git",
@@ -10,14 +10,13 @@
     "powerbi-visuals"
   ],
   "scripts": {
-    "postinstall": "pbiviz update 1.13.0",
     "pbiviz": "pbiviz",
     "start": "pbiviz start",
     "package": "pbiviz package",
-    "lint": "tslint -r \"node_modules/tslint-microsoft-contrib\" \"+(src|test)/**/*.ts\"",
+    "lint": "tslint -c tslint.json -p tsconfig.json",
     "pretest": "pbiviz package --resources --no-minify --no-pbiviz",
     "test": "karma start",
-    "cert": "pbiviz --create-cert"
+    "cert": "pbiviz --install-cert"
   },
   "author": {
     "name": "Microsoft",
@@ -29,36 +28,53 @@
   },
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-WordCloud#readme",
   "dependencies": {
-    "d3": "3.5.5",
-    "lodash": "4.17.5",
-    "powerbi-visuals-utils-colorutils": "^1.1.0",
-    "powerbi-visuals-utils-dataviewutils": "^1.2.0",
-    "powerbi-visuals-utils-formattingutils": "^2.0.0",
-    "powerbi-visuals-utils-svgutils": "^1.1.0",
-    "powerbi-visuals-utils-tooltiputils": "^1.0.0",
-    "powerbi-visuals-utils-typeutils": "^1.0.0",
+    "d3": "5.12.0",
+    "lodash": "4.17.15",
+    "powerbi-visuals-utils-colorutils": "^2.2.1",
+    "powerbi-visuals-utils-dataviewutils": "^2.2.1",
+    "powerbi-visuals-utils-formattingutils": "^4.4.2",
+    "powerbi-visuals-utils-svgutils": "^2.2.1",
+    "powerbi-visuals-utils-tooltiputils": "^2.3.1",
+    "powerbi-visuals-utils-typeutils": "^2.2.1",
     "powerbi-models": "^1.0.2"
   },
   "devDependencies": {
-    "@types/d3": "3.5.36",
-    "@types/jasmine": "2.5.43",
-    "@types/jasmine-jquery": "1.5.29",
-    "@types/jquery": "2.0.46",
-    "@types/lodash": "4.14.55",
-    "coveralls": "3.0.2",
-    "jasmine": "2.6.0",
+    "@types/d3": "5.7.2",
+    "@types/jasmine": "3.4.0",
+    "@types/jasmine-jquery": "1.5.33",
+    "@types/jquery": "3.3.31",
+    "@types/karma": "3.0.3",
+    "@types/lodash": "4.14.139",
+    "@types/webpack": "4.39.0",
+    "core-js": "3.2.1",
+    "coveralls": "3.0.6",
+    "css-loader": "3.2.0",
+    "istanbul-instrumenter-loader": "3.0.1",
+    "jasmine": "3.5.0",
     "jasmine-jquery": "2.1.1",
-    "jquery": "3.2.1",
-    "karma": "2.0.4",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-jasmine": "1.1.2",
+    "jquery": "3.4.1",
+    "karma": "4.3.0",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage": "2.0.1",
+    "karma-coverage-istanbul-reporter": "2.1.0",
+    "karma-jasmine": "2.0.1",
+    "karma-junit-reporter": "1.2.0",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-typescript-preprocessor": "0.3.1",
-    "powerbi-visuals-tools": "1.13.0",
-    "powerbi-visuals-utils-testutils": "1.2.1",
+    "karma-typescript": "4.1.1",
+    "karma-typescript-preprocessor": "0.4.0",
+    "karma-webpack": "4.0.2",
+    "less": "3.10.2",
+    "powerbi-visuals-api": "^2.6.1",
+    "powerbi-visuals-tools": "3.1.5",
+    "powerbi-visuals-utils-testutils": "2.2.1",
     "puppeteer": "^1.5.0",
-    "tslint": "5.4.3",
-    "tslint-microsoft-contrib": "5.0.0",
-    "typescript": "2.1.4"
+    "regenerator-runtime": "0.13.3",
+    "style-loader": "1.0.0",
+    "ts-loader": "6.0.4",
+    "ts-node": "8.3.0",
+    "tslint": "5.19.0",
+    "tslint-microsoft-contrib": "6.2.0",
+    "typescript": "3.6.2",
+    "webpack": "4.39.2"
   }
 }
