final tslint changes

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "pbiviz": "pbiviz",
     "start": "pbiviz start",
     "package": "pbiviz package",
-    "lint": "tslint -c tslint.json -p tsconfig.json",
+    "lint": "node node_modules/tslint/bin/tslint \"+(src|test)/**/*.ts\"",
     "pretest": "pbiviz package --resources --no-minify --no-pbiviz",
     "test": "karma start",
     "cert": "pbiviz --install-cert"
