--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-WordCloud#readme",
   "dependencies": {
     "d3": "5.12.0",
+    "jquery": "3.4.1",
     "lodash": "4.17.15",
     "powerbi-visuals-utils-colorutils": "^2.2.1",
     "powerbi-visuals-utils-dataviewutils": "^2.2.1",
@@ -52,7 +53,7 @@
     "istanbul-instrumenter-loader": "3.0.1",
     "jasmine": "3.5.0",
     "jasmine-jquery": "2.1.1",
-    "jquery": "3.4.1",
+    "json-loader": "^0.5.7",
     "karma": "4.3.0",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage": "2.0.1",
