--- a/package.json
+++ b/package.json
@@ -28,54 +28,55 @@
   },
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-WordCloud#readme",
   "dependencies": {
-    "d3": "5.12.0",
-    "jquery": "3.4.1",
-    "lodash": "4.17.15",
-    "powerbi-visuals-utils-colorutils": "^2.2.1",
-    "powerbi-visuals-utils-dataviewutils": "^2.2.1",
-    "powerbi-visuals-utils-formattingutils": "^4.4.2",
-    "powerbi-visuals-utils-svgutils": "^2.2.1",
-    "powerbi-visuals-utils-tooltiputils": "^2.3.1",
-    "powerbi-visuals-utils-typeutils": "^2.2.1",
-    "powerbi-models": "^1.0.2"
+    "d3": "6.7.0",
+    "jquery": "3.6.0",
+    "lodash": "4.17.21",
+    "regenerator-runtime": "^0.13.7",
+    "powerbi-visuals-utils-colorutils": "^2.3.1",
+    "powerbi-visuals-utils-dataviewutils": "^2.4.1",
+    "powerbi-visuals-utils-formattingutils": "^4.7.1",
+    "powerbi-visuals-utils-svgutils": "^2.3.2",
+    "powerbi-visuals-utils-tooltiputils": "^2.5.2",
+    "powerbi-visuals-utils-typeutils": "^2.3.1",
+    "powerbi-models": "^1.9.0"
   },
   "devDependencies": {
-    "@types/d3": "5.7.2",
-    "@types/jasmine": "3.4.0",
+    "@types/d3": "6.3.0",
+    "@types/jasmine": "3.6.9",
     "@types/jasmine-jquery": "1.5.33",
-    "@types/jquery": "3.3.31",
-    "@types/karma": "3.0.3",
-    "@types/lodash": "4.14.139",
-    "@types/webpack": "4.39.0",
-    "core-js": "3.2.1",
-    "coveralls": "3.0.6",
-    "css-loader": "3.2.0",
+    "@types/jquery": "3.5.5",
+    "@types/karma": "6.3.0",
+    "@types/lodash": "4.14.168",
+    "@types/webpack": "5.28.0",
+    "core-js": "3.10.1",
+    "coveralls": "3.1.0",
+    "css-loader": "5.2.2",
     "istanbul-instrumenter-loader": "3.0.1",
-    "jasmine": "3.5.0",
+    "jasmine": "3.7.0",
     "jasmine-jquery": "2.1.1",
     "json-loader": "^0.5.7",
-    "karma": "4.3.0",
+    "karma": "6.3.2",
     "karma-chrome-launcher": "3.1.0",
-    "karma-coverage": "2.0.1",
-    "karma-coverage-istanbul-reporter": "2.1.0",
-    "karma-jasmine": "2.0.1",
-    "karma-junit-reporter": "1.2.0",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-typescript": "4.1.1",
+    "karma-coverage": "2.0.3",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "4.0.1",
+    "karma-junit-reporter": "2.0.1",
+    "karma-sourcemap-loader": "0.3.8",
+    "karma-typescript": "5.5.1",
     "karma-typescript-preprocessor": "0.4.0",
-    "karma-webpack": "4.0.2",
-    "less": "3.10.2",
-    "powerbi-visuals-api": "~2.6.1",
-    "powerbi-visuals-tools": "3.1.5",
-    "powerbi-visuals-utils-testutils": "2.2.1",
-    "puppeteer": "^1.5.0",
-    "regenerator-runtime": "0.13.3",
-    "style-loader": "1.0.0",
-    "ts-loader": "6.0.4",
-    "ts-node": "8.3.0",
-    "tslint": "5.19.0",
+    "karma-webpack": "5.0.0",
+    "less": "4.1.1",
+    "powerbi-visuals-api": "^3.7.0",
+    "powerbi-visuals-tools": "3.1.17",
+    "powerbi-visuals-utils-testutils": "2.4.1",
+    "puppeteer": "^8.0.0",
+    "regenerator-runtime": "0.13.7",
+    "style-loader": "2.0.0",
+    "ts-loader": "9.0.0",
+    "ts-node": "9.1.1",
+    "tslint": "5.20.1",
     "tslint-microsoft-contrib": "6.2.0",
-    "typescript": "3.6.2",
-    "webpack": "4.39.2"
+    "typescript": "4.2.4",
+    "webpack": "5.33.2"
   }
 }
