--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-WordCloud#readme",
   "dependencies": {
     "d3": "6.7.0",
-    "jquery": "3.6.0",
-    "lodash": "4.17.21",
+    "lodash-es": "4.17.21",
     "regenerator-runtime": "^0.13.7",
     "powerbi-visuals-utils-colorutils": "^2.3.1",
     "powerbi-visuals-utils-dataviewutils": "^2.4.1",
@@ -44,9 +43,8 @@
     "@types/d3": "6.3.0",
     "@types/jasmine": "3.6.9",
     "@types/jasmine-jquery": "1.5.33",
-    "@types/jquery": "3.5.5",
     "@types/karma": "6.3.0",
-    "@types/lodash": "4.14.168",
+    "@types/lodash-es": "4.17.4",
     "@types/webpack": "5.28.0",
     "core-js": "3.10.1",
     "coveralls": "3.1.0",
@@ -66,7 +64,7 @@
     "karma-typescript-preprocessor": "0.4.0",
     "karma-webpack": "5.0.0",
     "less": "4.1.1",
-    "powerbi-visuals-api": "^3.7.0",
+    "powerbi-visuals-api": "^3.8.0",
     "powerbi-visuals-tools": "3.1.17",
     "powerbi-visuals-utils-testutils": "2.4.1",
     "puppeteer": "^8.0.0",
