--- a/package.json
+++ b/package.json
@@ -29,26 +29,40 @@
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-WordCloud#readme",
   "dependencies": {
     "d3": "6.7.0",
-    "lodash-es": "4.17.21",
-    "regenerator-runtime": "^0.13.7",
+    "lodash.isempty": "^4.4.0",
+    "lodash.isstring": "4.0.1",
+    "lodash.sortby": "4.7.0",
+    "lodash.uniqby": "4.7.0",
+    "lodash.maxby": "4.6.0",
+    "lodash.minby": "4.6.0",
+    "lodash.includes": "4.3.0",
+    "lodash.range": "3.2.0",
+    "powerbi-models": "^1.9.0",
     "powerbi-visuals-utils-colorutils": "^2.3.1",
     "powerbi-visuals-utils-dataviewutils": "^2.4.1",
     "powerbi-visuals-utils-formattingutils": "^4.7.1",
     "powerbi-visuals-utils-svgutils": "^2.3.2",
     "powerbi-visuals-utils-tooltiputils": "^2.5.2",
     "powerbi-visuals-utils-typeutils": "^2.3.1",
-    "powerbi-models": "^1.9.0"
+    "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
-    "@types/d3": "6.3.0",
-    "@types/jasmine": "3.6.9",
-    "@types/jasmine-jquery": "1.5.33",
+    "@types/d3": "6.5.0",
+    "@types/jasmine": "3.7.4",
+    "@types/jasmine-jquery": "1.5.34",
     "@types/karma": "6.3.0",
-    "@types/lodash-es": "4.17.4",
+    "@types/lodash.isempty": "4.4.6",
+    "@types/lodash.isstring": "4.0.6",
+    "@types/lodash.sortby": "4.7.6",
+    "@types/lodash.uniqby": "4.7.6",
+    "@types/lodash.maxby": "4.6.6",
+    "@types/lodash.minby": "4.6.6",
+    "@types/lodash.includes": "4.3.6",
+    "@types/lodash.range": "3.2.6",
     "@types/webpack": "5.28.0",
-    "core-js": "3.10.1",
+    "core-js": "3.12.1",
     "coveralls": "3.1.0",
-    "css-loader": "5.2.2",
+    "css-loader": "5.2.4",
     "istanbul-instrumenter-loader": "3.0.1",
     "jasmine": "3.7.0",
     "jasmine-jquery": "2.1.1",
@@ -65,16 +79,16 @@
     "karma-webpack": "5.0.0",
     "less": "4.1.1",
     "powerbi-visuals-api": "^3.8.0",
-    "powerbi-visuals-tools": "3.1.17",
+    "powerbi-visuals-tools": "3.1.18",
     "powerbi-visuals-utils-testutils": "2.4.1",
-    "puppeteer": "^8.0.0",
+    "puppeteer": "^9.1.1",
     "regenerator-runtime": "0.13.7",
     "style-loader": "2.0.0",
-    "ts-loader": "9.0.0",
+    "ts-loader": "9.1.2",
     "ts-node": "9.1.1",
     "tslint": "5.20.1",
     "tslint-microsoft-contrib": "6.2.0",
     "typescript": "4.2.4",
-    "webpack": "5.33.2"
+    "webpack": "5.37.1"
   }
 }
