--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-wordcloud",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "description": "Word Cloud is a visual representation of word frequency and value. Use it to get instant insight into the most important terms in a set.",
   "repository": {
     "type": "git",
@@ -28,7 +28,8 @@
   },
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-WordCloud#readme",
   "dependencies": {
-    "d3": "6.7.0",
+    "d3-selection": "2.0.0",
+    "d3-transition": "2.0.0",
     "lodash.isempty": "^4.4.0",
     "lodash.isstring": "4.0.1",
     "lodash.sortby": "4.7.0",
@@ -47,22 +48,23 @@
     "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
-    "@types/d3": "6.5.0",
+    "@types/d3-selection": "2.0.0",
+    "@types/d3-transition": "2.0.0",
     "@types/jasmine": "3.7.4",
     "@types/jasmine-jquery": "1.5.34",
     "@types/karma": "6.3.0",
+    "@types/lodash.includes": "4.3.6",
     "@types/lodash.isempty": "4.4.6",
     "@types/lodash.isstring": "4.0.6",
-    "@types/lodash.sortby": "4.7.6",
-    "@types/lodash.uniqby": "4.7.6",
     "@types/lodash.maxby": "4.6.6",
     "@types/lodash.minby": "4.6.6",
-    "@types/lodash.includes": "4.3.6",
     "@types/lodash.range": "3.2.6",
+    "@types/lodash.sortby": "4.7.6",
+    "@types/lodash.uniqby": "4.7.6",
     "@types/webpack": "5.28.0",
     "core-js": "3.12.1",
     "coveralls": "3.1.0",
-    "css-loader": "5.2.4",
+    "css-loader": "5.2.6",
     "istanbul-instrumenter-loader": "3.0.1",
     "jasmine": "3.7.0",
     "jasmine-jquery": "2.1.1",
@@ -79,13 +81,13 @@
     "karma-webpack": "5.0.0",
     "less": "4.1.1",
     "powerbi-visuals-api": "^3.8.0",
-    "powerbi-visuals-tools": "3.1.18",
+    "powerbi-visuals-tools": "^3.1.19",
     "powerbi-visuals-utils-testutils": "2.4.1",
     "puppeteer": "^9.1.1",
     "regenerator-runtime": "0.13.7",
     "style-loader": "2.0.0",
-    "ts-loader": "9.1.2",
-    "ts-node": "9.1.1",
+    "ts-loader": "9.2.2",
+    "ts-node": "10.0.0",
     "tslint": "5.20.1",
     "tslint-microsoft-contrib": "6.2.0",
     "typescript": "4.2.4",
