--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "package": "pbiviz package",
     "lint": "node node_modules/tslint/bin/tslint \"+(src|test)/**/*.ts\"",
     "pretest": "pbiviz package --resources --no-minify --no-pbiviz",
-    "test": "karma start",
+    "test": "ts-node node_modules/karma/bin/karma start karma.conf.ts",
     "cert": "pbiviz --install-cert"
   },
   "author": {
@@ -30,7 +30,8 @@
   "dependencies": {
     "d3-selection": "2.0.0",
     "d3-transition": "2.0.0",
-    "lodash.isempty": "^4.4.0",
+    "lodash.isempty": "4.4.0",
+    "lodash.difference": "4.5.0",
     "lodash.isstring": "4.0.1",
     "lodash.sortby": "4.7.0",
     "lodash.uniqby": "4.7.0",
@@ -52,7 +53,8 @@
     "@types/d3-transition": "2.0.0",
     "@types/jasmine": "3.7.4",
     "@types/jasmine-jquery": "1.5.34",
-    "@types/karma": "6.3.0",
+    "@types/karma": "^6.3.0",
+    "@types/lodash.difference": "4.5.6",
     "@types/lodash.includes": "4.3.6",
     "@types/lodash.isempty": "4.4.6",
     "@types/lodash.isstring": "4.0.6",
@@ -69,7 +71,7 @@
     "jasmine": "3.7.0",
     "jasmine-jquery": "2.1.1",
     "json-loader": "^0.5.7",
-    "karma": "6.3.2",
+    "karma": "^6.3.2",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage": "2.0.3",
     "karma-coverage-istanbul-reporter": "3.0.3",
@@ -80,17 +82,17 @@
     "karma-typescript-preprocessor": "0.4.0",
     "karma-webpack": "5.0.0",
     "less": "4.1.1",
-    "powerbi-visuals-api": "^3.8.0",
+    "powerbi-visuals-api": "^3.7.0",
     "powerbi-visuals-tools": "^3.1.19",
     "powerbi-visuals-utils-testutils": "2.4.1",
     "puppeteer": "^9.1.1",
     "regenerator-runtime": "0.13.7",
     "style-loader": "2.0.0",
     "ts-loader": "9.2.2",
-    "ts-node": "10.0.0",
+    "ts-node": "^10.0.0",
     "tslint": "5.20.1",
     "tslint-microsoft-contrib": "6.2.0",
-    "typescript": "4.2.4",
+    "typescript": "^4.2.4",
     "webpack": "5.37.1"
   }
 }
