--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "package": "pbiviz package",
     "lint": "node node_modules/tslint/bin/tslint \"+(src|test)/**/*.ts\"",
     "pretest": "pbiviz package --resources --no-minify --no-pbiviz",
-    "test": "ts-node node_modules/karma/bin/karma start karma.conf.ts",
+    "test": "karma start",
     "cert": "pbiviz --install-cert"
   },
   "author": {
@@ -28,8 +28,8 @@
   },
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-WordCloud#readme",
   "dependencies": {
-    "d3-selection": "2.0.0",
-    "d3-transition": "2.0.0",
+    "d3-selection": "3.0.0",
+    "d3-transition": "3.0.1",
     "lodash.isempty": "4.4.0",
     "lodash.difference": "4.5.0",
     "lodash.isstring": "4.0.1",
@@ -39,7 +39,7 @@
     "lodash.minby": "4.6.0",
     "lodash.includes": "4.3.0",
     "lodash.range": "3.2.0",
-    "powerbi-models": "^1.9.0",
+    "powerbi-models": "^1.9.1",
     "powerbi-visuals-utils-colorutils": "^2.3.1",
     "powerbi-visuals-utils-dataviewutils": "^2.4.1",
     "powerbi-visuals-utils-formattingutils": "^4.7.1",
@@ -51,7 +51,7 @@
   "devDependencies": {
     "@types/d3-selection": "2.0.0",
     "@types/d3-transition": "2.0.0",
-    "@types/jasmine": "3.7.4",
+    "@types/jasmine": "3.7.7",
     "@types/jasmine-jquery": "1.5.34",
     "@types/karma": "^6.3.0",
     "@types/lodash.difference": "4.5.6",
@@ -64,35 +64,35 @@
     "@types/lodash.sortby": "4.7.6",
     "@types/lodash.uniqby": "4.7.6",
     "@types/webpack": "5.28.0",
-    "core-js": "3.12.1",
+    "core-js": "3.15.0",
     "coveralls": "3.1.0",
     "css-loader": "5.2.6",
     "istanbul-instrumenter-loader": "3.0.1",
-    "jasmine": "3.7.0",
-    "jasmine-jquery": "2.1.1",
+    "jasmine": "3.5.0",
+    "jasmine-jquery": "^2.0.0",
     "json-loader": "^0.5.7",
-    "karma": "^6.3.2",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage": "2.0.3",
     "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "4.0.1",
+    "karma-jasmine": "^2.0.0",
     "karma-junit-reporter": "2.0.1",
     "karma-sourcemap-loader": "0.3.8",
     "karma-typescript": "5.5.1",
     "karma-typescript-preprocessor": "0.4.0",
     "karma-webpack": "5.0.0",
     "less": "4.1.1",
-    "powerbi-visuals-api": "^3.7.0",
-    "powerbi-visuals-tools": "^3.1.19",
+    "powerbi-visuals-api": "^3.8.2",
+    "powerbi-visuals-tools": "^3.2.3",
     "powerbi-visuals-utils-testutils": "2.4.1",
-    "puppeteer": "^9.1.1",
+    "puppeteer": "^10.0.0",
     "regenerator-runtime": "0.13.7",
     "style-loader": "2.0.0",
-    "ts-loader": "9.2.2",
+    "ts-loader": "9.2.3",
     "ts-node": "^10.0.0",
     "tslint": "5.20.1",
     "tslint-microsoft-contrib": "6.2.0",
-    "typescript": "^4.2.4",
-    "webpack": "5.37.1"
+    "typescript": "^4.3.4",
+    "webpack": "5.40.0"
   }
 }
