--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-wordcloud",
-  "version": "2.0.0",
+  "version": "2.1.4",
   "description": "Word Cloud is a visual representation of word frequency and value. Use it to get instant insight into the most important terms in a set.",
   "repository": {
     "type": "git",
@@ -28,54 +28,71 @@
   },
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-WordCloud#readme",
   "dependencies": {
-    "d3": "5.12.0",
-    "jquery": "3.4.1",
-    "lodash": "4.17.15",
-    "powerbi-visuals-utils-colorutils": "^2.2.1",
-    "powerbi-visuals-utils-dataviewutils": "^2.2.1",
-    "powerbi-visuals-utils-formattingutils": "^4.4.2",
-    "powerbi-visuals-utils-svgutils": "^2.2.1",
-    "powerbi-visuals-utils-tooltiputils": "^2.3.1",
-    "powerbi-visuals-utils-typeutils": "^2.2.1",
-    "powerbi-models": "^1.0.2"
+    "d3-selection": "3.0.0",
+    "d3-transition": "3.0.1",
+    "lodash.isempty": "4.4.0",
+    "lodash.difference": "4.5.0",
+    "lodash.isstring": "4.0.1",
+    "lodash.sortby": "4.7.0",
+    "lodash.uniqby": "4.7.0",
+    "lodash.maxby": "4.6.0",
+    "lodash.minby": "4.6.0",
+    "lodash.includes": "4.3.0",
+    "lodash.range": "3.2.0",
+    "powerbi-models": "^1.9.1",
+    "powerbi-visuals-utils-colorutils": "^2.3.1",
+    "powerbi-visuals-utils-dataviewutils": "^2.4.1",
+    "powerbi-visuals-utils-formattingutils": "^4.7.1",
+    "powerbi-visuals-utils-svgutils": "^2.3.2",
+    "powerbi-visuals-utils-tooltiputils": "^2.5.2",
+    "powerbi-visuals-utils-typeutils": "^2.3.1",
+    "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
-    "@types/d3": "5.7.2",
-    "@types/jasmine": "3.4.0",
-    "@types/jasmine-jquery": "1.5.33",
-    "@types/jquery": "3.3.31",
-    "@types/karma": "3.0.3",
-    "@types/lodash": "4.14.139",
-    "@types/webpack": "4.39.0",
-    "core-js": "3.2.1",
-    "coveralls": "3.0.6",
-    "css-loader": "3.2.0",
+    "@types/d3-selection": "2.0.0",
+    "@types/d3-transition": "2.0.0",
+    "@types/jasmine": "3.7.7",
+    "@types/jasmine-jquery": "1.5.34",
+    "@types/karma": "^6.3.0",
+    "@types/lodash.difference": "4.5.6",
+    "@types/lodash.includes": "4.3.6",
+    "@types/lodash.isempty": "4.4.6",
+    "@types/lodash.isstring": "4.0.6",
+    "@types/lodash.maxby": "4.6.6",
+    "@types/lodash.minby": "4.6.6",
+    "@types/lodash.range": "3.2.6",
+    "@types/lodash.sortby": "4.7.6",
+    "@types/lodash.uniqby": "4.7.6",
+    "@types/webpack": "5.28.0",
+    "core-js": "3.15.0",
+    "coveralls": "3.1.0",
+    "css-loader": "5.2.6",
     "istanbul-instrumenter-loader": "3.0.1",
     "jasmine": "3.5.0",
-    "jasmine-jquery": "2.1.1",
+    "jasmine-jquery": "^2.0.0",
     "json-loader": "^0.5.7",
-    "karma": "4.3.0",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "3.1.0",
-    "karma-coverage": "2.0.1",
-    "karma-coverage-istanbul-reporter": "2.1.0",
-    "karma-jasmine": "2.0.1",
-    "karma-junit-reporter": "1.2.0",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-typescript": "4.1.1",
+    "karma-coverage": "2.0.3",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "^2.0.0",
+    "karma-junit-reporter": "2.0.1",
+    "karma-sourcemap-loader": "0.3.8",
+    "karma-typescript": "5.5.1",
     "karma-typescript-preprocessor": "0.4.0",
-    "karma-webpack": "4.0.2",
-    "less": "3.10.2",
-    "powerbi-visuals-api": "~2.6.1",
-    "powerbi-visuals-tools": "3.1.5",
-    "powerbi-visuals-utils-testutils": "2.2.1",
-    "puppeteer": "^1.5.0",
-    "regenerator-runtime": "0.13.3",
-    "style-loader": "1.0.0",
-    "ts-loader": "6.0.4",
-    "ts-node": "8.3.0",
-    "tslint": "5.19.0",
+    "karma-webpack": "5.0.0",
+    "less": "4.1.1",
+    "powerbi-visuals-api": "^3.8.2",
+    "powerbi-visuals-tools": "^3.2.3",
+    "powerbi-visuals-utils-testutils": "2.4.1",
+    "puppeteer": "^10.0.0",
+    "regenerator-runtime": "0.13.7",
+    "style-loader": "2.0.0",
+    "ts-loader": "9.2.3",
+    "ts-node": "^10.0.0",
+    "tslint": "5.20.1",
     "tslint-microsoft-contrib": "6.2.0",
-    "typescript": "3.6.2",
-    "webpack": "4.39.2"
+    "typescript": "^4.3.4",
+    "webpack": "5.40.0"
   }
 }
