--- a/package.json
+++ b/package.json
@@ -28,32 +28,30 @@
   },
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-WordCloud#readme",
   "dependencies": {
-    "d3-selection": "3.0.0",
-    "d3-transition": "3.0.1",
-    "lodash.isempty": "4.4.0",
+    "d3": "7.2.1",
     "lodash.difference": "4.5.0",
+    "lodash.includes": "4.3.0",
+    "lodash.isempty": "4.4.0",
     "lodash.isstring": "4.0.1",
-    "lodash.sortby": "4.7.0",
-    "lodash.uniqby": "4.7.0",
     "lodash.maxby": "4.6.0",
     "lodash.minby": "4.6.0",
-    "lodash.includes": "4.3.0",
     "lodash.range": "3.2.0",
-    "powerbi-models": "^1.9.1",
+    "lodash.sortby": "4.7.0",
+    "lodash.uniqby": "4.7.0",
+    "powerbi-models": "^1.9.7",
     "powerbi-visuals-utils-colorutils": "^2.3.1",
     "powerbi-visuals-utils-dataviewutils": "^2.4.1",
     "powerbi-visuals-utils-formattingutils": "^4.7.1",
     "powerbi-visuals-utils-svgutils": "^2.3.2",
     "powerbi-visuals-utils-tooltiputils": "^2.5.2",
     "powerbi-visuals-utils-typeutils": "^2.3.1",
-    "regenerator-runtime": "^0.13.7"
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
-    "@types/d3-selection": "2.0.0",
-    "@types/d3-transition": "2.0.0",
-    "@types/jasmine": "3.7.7",
+    "@types/d3": "7.1.0",
+    "@types/jasmine": "3.10.2",
     "@types/jasmine-jquery": "1.5.34",
-    "@types/karma": "^6.3.0",
+    "@types/karma": "^6.3.1",
     "@types/lodash.difference": "4.5.6",
     "@types/lodash.includes": "4.3.6",
     "@types/lodash.isempty": "4.4.6",
@@ -64,35 +62,35 @@
     "@types/lodash.sortby": "4.7.6",
     "@types/lodash.uniqby": "4.7.6",
     "@types/webpack": "5.28.0",
-    "core-js": "3.15.0",
-    "coveralls": "3.1.0",
-    "css-loader": "5.2.6",
+    "core-js": "3.20.0",
+    "coveralls": "3.1.1",
+    "css-loader": "6.5.1",
     "istanbul-instrumenter-loader": "3.0.1",
-    "jasmine": "3.5.0",
-    "jasmine-jquery": "^2.0.0",
+    "jasmine": "3.10.0",
+    "jasmine-jquery": "^2.1.1",
     "json-loader": "^0.5.7",
-    "karma": "^6.3.4",
+    "karma": "^6.3.9",
     "karma-chrome-launcher": "3.1.0",
-    "karma-coverage": "2.0.3",
+    "karma-coverage": "2.1.0",
     "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "^2.0.0",
+    "karma-jasmine": "^4.0.1",
     "karma-junit-reporter": "2.0.1",
     "karma-sourcemap-loader": "0.3.8",
-    "karma-typescript": "5.5.1",
+    "karma-typescript": "5.5.2",
     "karma-typescript-preprocessor": "0.4.0",
     "karma-webpack": "5.0.0",
-    "less": "4.1.1",
-    "powerbi-visuals-api": "^3.8.2",
-    "powerbi-visuals-tools": "^3.2.3",
+    "less": "4.1.2",
+    "powerbi-visuals-api": "^3.8.4",
+    "powerbi-visuals-tools": "^4.0.0",
     "powerbi-visuals-utils-testutils": "2.4.1",
-    "puppeteer": "^10.0.0",
-    "regenerator-runtime": "0.13.7",
-    "style-loader": "2.0.0",
-    "ts-loader": "9.2.3",
-    "ts-node": "^10.0.0",
-    "tslint": "5.20.1",
+    "puppeteer": "^13.0.0",
+    "regenerator-runtime": "0.13.9",
+    "style-loader": "3.3.1",
+    "ts-loader": "9.2.6",
+    "ts-node": "^10.4.0",
+    "tslint": "6.1.3",
     "tslint-microsoft-contrib": "6.2.0",
-    "typescript": "^4.3.4",
-    "webpack": "5.40.0"
+    "typescript": "^4.5.4",
+    "webpack": "5.65.0"
   }
 }
