--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-WordCloud#readme",
   "dependencies": {
-    "d3": "7.2.1",
+    "d3-selection": "3.0.0",
+    "d3-transition": "3.0.1",
     "lodash.difference": "4.5.0",
     "lodash.includes": "4.3.0",
     "lodash.isempty": "4.4.0",
@@ -48,7 +49,8 @@
     "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
-    "@types/d3": "7.1.0",
+    "@types/d3-selection": "3.0.2",
+    "@types/d3-transition": "3.0.1",
     "@types/jasmine": "3.10.2",
     "@types/jasmine-jquery": "1.5.34",
     "@types/karma": "^6.3.1",
@@ -80,9 +82,9 @@
     "karma-typescript-preprocessor": "0.4.0",
     "karma-webpack": "5.0.0",
     "less": "4.1.2",
-    "powerbi-visuals-api": "^3.8.4",
-    "powerbi-visuals-tools": "^4.0.0",
-    "powerbi-visuals-utils-testutils": "2.4.1",
+    "powerbi-visuals-api": "^4.0.0",
+    "powerbi-visuals-tools": "^4.0.2",
+    "powerbi-visuals-utils-testutils": "2.4.2",
     "puppeteer": "^13.0.0",
     "regenerator-runtime": "0.13.9",
     "style-loader": "3.3.1",
