Updated packages and config files

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-WordCloud#readme",
   "dependencies": {
     "d3": "5.12.0",
-    "jquery": "3.4.1",
-    "lodash": "4.17.15",
+    "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "powerbi-models": "^1.0.2",
     "powerbi-visuals-utils-colorutils": "^2.2.1",
     "powerbi-visuals-utils-dataviewutils": "^2.2.1",
@@ -41,41 +41,41 @@
   },
   "devDependencies": {
     "@types/d3": "5.7.2",
-    "@types/jasmine": "3.4.0",
-    "@types/jasmine-jquery": "1.5.33",
+    "@types/jasmine": "^4.0.3",
+    "@types/jasmine-jquery": "^1.5.34",
     "@types/jquery": "3.3.31",
-    "@types/karma": "3.0.3",
+    "@types/karma": "^6.3.3",
     "@types/lodash": "4.14.139",
     "@types/webpack": "4.39.0",
     "core-js": "3.2.1",
+    "coverage-istanbul-loader": "^3.0.5",
     "coveralls": "3.0.6",
-    "css-loader": "3.2.0",
-    "istanbul-instrumenter-loader": "3.0.1",
-    "jasmine": "3.5.0",
+    "css-loader": "^6.7.1",
+    "jasmine": "^4.3.0",
     "jasmine-jquery": "2.1.1",
     "json-loader": "^0.5.7",
-    "karma": "4.3.0",
+    "karma": "^6.4.0",
     "karma-chrome-launcher": "3.1.0",
-    "karma-coverage": "2.0.1",
-    "karma-coverage-istanbul-reporter": "2.1.0",
+    "karma-coverage": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "2.0.1",
     "karma-junit-reporter": "1.2.0",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-typescript": "4.1.1",
+    "karma-typescript": "^5.5.3",
     "karma-typescript-preprocessor": "0.4.0",
-    "karma-webpack": "4.0.2",
+    "karma-webpack": "^5.0.0",
     "less": "3.10.2",
-    "powerbi-visuals-api": "^3.2.0",
-    "powerbi-visuals-tools": "3.1.5",
-    "powerbi-visuals-utils-testutils": "2.2.1",
-    "puppeteer": "^1.5.0",
+    "less-loader": "^11.0.0",
+    "powerbi-visuals-api": "^4.7.0",
+    "powerbi-visuals-tools": "^4.0.5",
+    "powerbi-visuals-utils-testutils": "^2.6.0",
+    "puppeteer": "^16.1.0",
     "regenerator-runtime": "0.13.3",
-    "style-loader": "1.0.0",
-    "ts-loader": "6.0.4",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^8.4.0",
     "ts-node": "8.3.0",
     "tslint": "5.19.0",
     "tslint-microsoft-contrib": "6.2.0",
-    "typescript": "3.6.2",
-    "webpack": "4.39.2"
+    "webpack": "^5.74.0"
   }
 }
