--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "pbiviz": "pbiviz",
     "start": "pbiviz start",
     "package": "pbiviz package",
-    "lint": "node node_modules/tslint/bin/tslint \"+(src|test)/**/*.ts\"",
+    "lint": "npm run eslint",
     "pretest": "pbiviz package --resources --no-minify --no-pbiviz",
     "test": "karma start",
-    "cert": "pbiviz --install-cert"
+    "cert": "pbiviz --install-cert",
+    "eslint": "npx eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "author": {
     "name": "Microsoft",
@@ -40,6 +41,7 @@
     "powerbi-visuals-utils-typeutils": "^2.2.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.24.2",
     "@types/d3": "5.7.2",
     "@types/jasmine": "^4.0.3",
     "@types/jasmine-jquery": "^1.5.34",
@@ -47,10 +49,13 @@
     "@types/karma": "^6.3.3",
     "@types/lodash": "4.14.139",
     "@types/webpack": "4.39.0",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
     "core-js": "3.2.1",
-    "coverage-istanbul-loader": "^3.0.5",
     "coveralls": "3.0.6",
     "css-loader": "^6.7.1",
+    "eslint": "^8.21.0",
+    "eslint-plugin-powerbi-visuals": "^0.8.1",
     "jasmine": "^4.3.0",
     "jasmine-jquery": "2.1.1",
     "json-loader": "^0.5.7",
@@ -69,12 +74,10 @@
     "powerbi-visuals-api": "^4.7.0",
     "powerbi-visuals-tools": "^4.0.5",
     "powerbi-visuals-utils-testutils": "^2.6.0",
-    "puppeteer": "^16.1.0",
     "regenerator-runtime": "0.13.3",
     "style-loader": "^3.3.1",
     "ts-loader": "^8.4.0",
     "ts-node": "8.3.0",
-    "tslint": "5.19.0",
     "tslint-microsoft-contrib": "6.2.0",
     "webpack": "^5.74.0"
   }
