--- a/package.json
+++ b/package.json
@@ -29,35 +29,63 @@
   },
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-WordCloud#readme",
   "dependencies": {
-    "d3": "5.12.0",
+    "d3-selection": "^3.0.0",
+    "d3-transition": "^3.0.1",
     "jquery": "^3.6.0",
-    "lodash": "^4.17.21",
-    "powerbi-models": "^1.0.2",
-    "powerbi-visuals-utils-colorutils": "^2.2.1",
-    "powerbi-visuals-utils-dataviewutils": "^2.2.1",
-    "powerbi-visuals-utils-formattingutils": "^4.4.2",
-    "powerbi-visuals-utils-svgutils": "^2.2.1",
-    "powerbi-visuals-utils-tooltiputils": "^2.3.1",
-    "powerbi-visuals-utils-typeutils": "^2.2.1"
+    "lodash.clone": "^4.5.0",
+    "lodash.difference": "^4.5.0",
+    "lodash.flatten": "^4.4.0",
+    "lodash.includes": "^4.3.0",
+    "lodash.isarray": "^4.0.0",
+    "lodash.isempty": "^4.4.0",
+    "lodash.isstring": "^4.0.1",
+    "lodash.keys": "^4.2.0",
+    "lodash.mapvalues": "^4.6.0",
+    "lodash.maxby": "^4.6.0",
+    "lodash.minby": "^4.6.0",
+    "lodash.range": "^3.2.0",
+    "lodash.sortby": "^4.7.0",
+    "lodash.toarray": "^4.4.0",
+    "lodash.uniqby": "^4.7.0",
+    "powerbi-models": "^1.11.0",
+    "powerbi-visuals-utils-colorutils": "^2.3.1",
+    "powerbi-visuals-utils-dataviewutils": "^2.4.1",
+    "powerbi-visuals-utils-formattingutils": "^4.7.1",
+    "powerbi-visuals-utils-svgutils": "^2.3.2",
+    "powerbi-visuals-utils-tooltiputils": "^2.5.2",
+    "powerbi-visuals-utils-typeutils": "^2.3.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.24.2",
-    "@types/d3": "5.7.2",
+    "@types/d3": "^7.4.0",
     "@types/jasmine": "^4.0.3",
     "@types/jasmine-jquery": "^1.5.34",
-    "@types/jquery": "3.3.31",
+    "@types/jquery": "^3.5.14",
     "@types/karma": "^6.3.3",
-    "@types/lodash": "4.14.139",
+    "@types/lodash.clone": "^4.5.7",
+    "@types/lodash.difference": "^4.5.7",
+    "@types/lodash.flatten": "^4.4.7",
+    "@types/lodash.includes": "^4.3.7",
+    "@types/lodash.isarray": "^4.0.7",
+    "@types/lodash.isempty": "^4.4.7",
+    "@types/lodash.isstring": "^4.0.7",
+    "@types/lodash.keys": "^4.2.7",
+    "@types/lodash.mapvalues": "^4.6.7",
+    "@types/lodash.maxby": "^4.6.7",
+    "@types/lodash.minby": "^4.6.7",
+    "@types/lodash.range": "^3.2.7",
+    "@types/lodash.sortby": "^4.7.7",
+    "@types/lodash.toarray": "^4.4.7",
+    "@types/lodash.uniqby": "^4.7.7",
     "@types/webpack": "4.39.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
-    "core-js": "3.2.1",
     "coveralls": "3.0.6",
     "css-loader": "^6.7.1",
     "eslint": "^8.21.0",
     "eslint-plugin-powerbi-visuals": "^0.8.1",
     "jasmine": "^4.3.0",
-    "jasmine-jquery": "2.1.1",
+    "jasmine-jquery": "^2.1.1",
     "json-loader": "^0.5.7",
     "karma": "^6.4.0",
     "karma-chrome-launcher": "3.1.0",
