--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,16 +2,16 @@ name: build
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, dev]
   pull_request:
-    branches: [ main ]
+    branches: [ main, dev ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [18.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -19,18 +19,13 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-
     - run: npm audit
       continue-on-error: true
-
+    - run: npm outdated
     - run: npm ci
-
     - run: npm run eslint --if-present
-
     - run: npm run lint --if-present
-
     - run: npm run package
-
-    - run: npm run test
+    - run: npm test
       env:
         CI: true
