Fix audit, update api and tools

--- a/package.json
+++ b/package.json
@@ -89,8 +89,8 @@
     "less": "^4.2.0",
     "less-loader": "^11.1.4",
     "playwright-chromium": "^1.44.1",
-    "powerbi-visuals-api": "~5.9.0",
-    "powerbi-visuals-tools": "^5.4.3",
+    "powerbi-visuals-api": "^5.11.0",
+    "powerbi-visuals-tools": "^5.5.1",
     "powerbi-visuals-utils-testutils": "^6.1.1",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.4.4",
